add better kill command and more
